# Kuli-back

./: .env.example  .env.production.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  官网与订单系统设计plan.md  项目背景.md
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_kuli_v2_schema.py
apps/api/app/: __init__.py  database.py  main.py  security.py
apps/api/app/core/: config.py
apps/api/app/models/: entities.py
apps/api/app/notifications/: __init__.py  email.py  events.py  in_app.py
apps/api/app/notifications/templates/: admin_reply.html  email_verify.html  password_reset.html
apps/api/app/schemas/: api.py
apps/api/app/services/: auth_tokens.py  automation.py  catalog.py  docs.py  embeddings.py  health.py  knowledge.py  llm.py  rag.py  security_controls.py  storage.py  xiaoku.py
apps/api/app/tasks/: attachment_tasks.py  celery_app.py  embedding_tasks.py  notification_tasks.py  order_automation_tasks.py
apps/api/knowledge/docs/: concepts.md  contact.md  faq.md  guides.md  quick-start.md
apps/api/tests/: test_api.py  test_knowledge_scripts.py  test_notifications.py  test_ops_health.py  test_security_controls.py  test_xiaoku_agent.py
backend/: .env.example  package.json  vitest.config.ts
docs/: 1.0plan.md  2.0pan.md  3.0plan.md  TECHNICAL_ARCHITECTURE.md
frontend/: .env.example  index.html  package.json
scripts/: browser_smoke.mjs  generate_openapi_contract.py  index_knowledge.py  knowledge_doctor.py  start-local.sh  stop-local.sh  (+1 more)
(+64 files in other folders)
