[project]
name = "kuli-api"
version = "0.2.0"
description = "Kuli 2.0 FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "celery>=5.4.0,<6.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "redis>=5.2.0,<6.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
  "boto3>=1.43.17",
  "httpx>=0.28.1",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.9.0,<1.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
